cmake_minimum_required(VERSION 3.3)
project(aca_sgm)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    aca_sgm1/common/inc/dynlink/channel_descriptor_dynlink.h
    aca_sgm1/common/inc/dynlink/common_functions_dynlink.h
    aca_sgm1/common/inc/dynlink/cuda_drvapi_dynlink.h
    aca_sgm1/common/inc/dynlink/cuda_drvapi_dynlink_cuda.h
    aca_sgm1/common/inc/dynlink/cuda_drvapi_dynlink_d3d.h
    aca_sgm1/common/inc/dynlink/cuda_drvapi_dynlink_gl.h
    aca_sgm1/common/inc/dynlink/cuda_runtime_api_dynlink.h
    aca_sgm1/common/inc/dynlink/cuda_runtime_dynlink.h
    aca_sgm1/common/inc/dynlink/cuda_texture_types_dynlink.h
    aca_sgm1/common/inc/dynlink/device_functions_dynlink.h
    aca_sgm1/common/inc/dynlink/math_functions_dbl_ptx3_dynlink.h
    aca_sgm1/common/inc/dynlink/math_functions_dynlink.h
    aca_sgm1/common/inc/dynlink/texture_fetch_functions_dynlink.h
    aca_sgm1/common/inc/GL/freeglut.h
    aca_sgm1/common/inc/GL/freeglut_ext.h
    aca_sgm1/common/inc/GL/freeglut_std.h
    aca_sgm1/common/inc/GL/glew.h
    aca_sgm1/common/inc/GL/glext.h
    aca_sgm1/common/inc/GL/glut.h
    aca_sgm1/common/inc/GL/glxew.h
    aca_sgm1/common/inc/GL/glxext.h
    aca_sgm1/common/inc/GL/wglew.h
    aca_sgm1/common/inc/html/search/all_63.html
    aca_sgm1/common/inc/html/search/all_64.html
    aca_sgm1/common/inc/html/search/close.png
    aca_sgm1/common/inc/html/search/defines_63.html
    aca_sgm1/common/inc/html/search/defines_64.html
    aca_sgm1/common/inc/html/search/enums_63.html
    aca_sgm1/common/inc/html/search/enumvalues_63.html
    aca_sgm1/common/inc/html/search/files_63.html
    aca_sgm1/common/inc/html/search/functions_63.html
    aca_sgm1/common/inc/html/search/nomatches.html
    aca_sgm1/common/inc/html/search/search.css
    aca_sgm1/common/inc/html/search/search.js
    aca_sgm1/common/inc/html/search/search.png
    aca_sgm1/common/inc/html/cutil_8h.html
    aca_sgm1/common/inc/html/cutil_8h_source.html
    aca_sgm1/common/inc/html/doxygen.css
    aca_sgm1/common/inc/html/doxygen.png
    aca_sgm1/common/inc/html/files.html
    aca_sgm1/common/inc/html/globals.html
    aca_sgm1/common/inc/html/globals_defs.html
    aca_sgm1/common/inc/html/globals_enum.html
    aca_sgm1/common/inc/html/globals_eval.html
    aca_sgm1/common/inc/html/globals_func.html
    aca_sgm1/common/inc/html/index.html
    aca_sgm1/common/inc/html/installdox
    aca_sgm1/common/inc/html/tab_b.gif
    aca_sgm1/common/inc/html/tab_l.gif
    aca_sgm1/common/inc/html/tab_r.gif
    aca_sgm1/common/inc/html/tabs.css
    aca_sgm1/common/inc/latex/cutil_8h.tex
    aca_sgm1/common/inc/latex/doxygen.sty
    aca_sgm1/common/inc/latex/files.tex
    aca_sgm1/common/inc/latex/Makefile
    aca_sgm1/common/inc/latex/refman.tex
    aca_sgm1/common/inc/bank_checker.h
    aca_sgm1/common/inc/cmd_arg_reader.h
    aca_sgm1/common/inc/cuda_drvapi_dynlink.c
    aca_sgm1/common/inc/cutil.h
    aca_sgm1/common/inc/cutil_gl_error.h
    aca_sgm1/common/inc/cutil_gl_inline.h
    aca_sgm1/common/inc/cutil_inline.h
    aca_sgm1/common/inc/cutil_inline_bankchecker.h
    aca_sgm1/common/inc/cutil_inline_drvapi.h
    aca_sgm1/common/inc/cutil_inline_runtime.h
    aca_sgm1/common/inc/cutil_math.h
    aca_sgm1/common/inc/Doxyfile
    aca_sgm1/common/inc/dynlink_d3d10.h
    aca_sgm1/common/inc/dynlink_d3d11.h
    aca_sgm1/common/inc/error_checker.h
    aca_sgm1/common/inc/exception.h
    aca_sgm1/common/inc/multithreading.h
    aca_sgm1/common/inc/nvGlutWidgets.h
    aca_sgm1/common/inc/nvGLWidgets.h
    aca_sgm1/common/inc/nvMath.h
    aca_sgm1/common/inc/nvMatrix.h
    aca_sgm1/common/inc/nvQuaternion.h
    aca_sgm1/common/inc/nvShaderUtils.h
    aca_sgm1/common/inc/nvVector.h
    aca_sgm1/common/inc/nvWidgets.h
    aca_sgm1/common/inc/param.h
    aca_sgm1/common/inc/paramgl.h
    aca_sgm1/common/inc/rendercheck_d3d10.h
    aca_sgm1/common/inc/rendercheck_d3d11.h
    aca_sgm1/common/inc/rendercheck_d3d9.h
    aca_sgm1/common/inc/rendercheck_gl.h
    aca_sgm1/common/inc/stopwatch.h
    aca_sgm1/common/inc/stopwatch_base.h
    aca_sgm1/common/inc/stopwatch_base.inl
    aca_sgm1/common/inc/stopwatch_linux.h
    aca_sgm1/common/lib/linux/libGLEW.a
    aca_sgm1/common/lib/linux/libGLEW_x86_64.a
    aca_sgm1/common/obj/i386/release/bank_checker.cpp.o
    aca_sgm1/common/obj/i386/release/cmd_arg_reader.cpp.o
    aca_sgm1/common/obj/i386/release/cutil.cpp.o
    aca_sgm1/common/obj/i386/release/multithreading.cpp.o
    aca_sgm1/common/obj/i386/release/param.cpp.o
    aca_sgm1/common/obj/i386/release/paramgl.cpp.o
    aca_sgm1/common/obj/i386/release/rendercheck_gl.cpp.o
    aca_sgm1/common/obj/i386/release/stopwatch.cpp.o
    aca_sgm1/common/obj/i386/release/stopwatch_linux.cpp.o
    aca_sgm1/common/obj/x86_64/release/bank_checker.cpp.o
    aca_sgm1/common/obj/x86_64/release/cmd_arg_reader.cpp.o
    aca_sgm1/common/obj/x86_64/release/cutil.cpp.o
    aca_sgm1/common/obj/x86_64/release/multithreading.cpp.o
    aca_sgm1/common/obj/x86_64/release/stopwatch.cpp.o
    aca_sgm1/common/obj/x86_64/release/stopwatch_linux.cpp.o
    aca_sgm1/common/src/bank_checker.cpp
    aca_sgm1/common/src/cmd_arg_reader.cpp
    aca_sgm1/common/src/cuda_runtime_dynlink.cpp
    aca_sgm1/common/src/cutil.cpp
    aca_sgm1/common/src/multithreading.cpp
    aca_sgm1/common/src/param.cpp
    aca_sgm1/common/src/paramgl.cpp
    aca_sgm1/common/src/rendercheck_d3d10.cpp
    aca_sgm1/common/src/rendercheck_d3d11.cpp
    aca_sgm1/common/src/rendercheck_d3d9.cpp
    aca_sgm1/common/src/rendercheck_gl.cpp
    aca_sgm1/common/src/stopwatch.cpp
    aca_sgm1/common/src/stopwatch_linux.cpp
    aca_sgm1/common/common.mk
    aca_sgm1/common/cutil_Readme.txt
    aca_sgm1/common/Makefile
    aca_sgm1/common/Makefile_paramgl
    aca_sgm1/common/Makefile_rendercheckgl
    aca_sgm1/lib/libcutil_x86_64.a
    aca_sgm1/d_dbull.pgm
    aca_sgm1/h_dbull.pgm
    aca_sgm1/lbull.pgm
    aca_sgm1/lcones.pgm
    aca_sgm1/lteddy.pgm
    aca_sgm1/lvenus.pgm
    aca_sgm1/Makefile
    aca_sgm1/rbull.pgm
    aca_sgm1/rcones.pgm
    aca_sgm1/reference.pgm
    aca_sgm1/rteddy.pgm
    aca_sgm1/rvenus.pgm
    aca_sgm1/sgm
    aca_sgm1/sgm.cu
    aca_sgm1/testDiffs
    aca_sgm1/testDiffs.cu
    aca_sgm2/common/inc/dynlink/channel_descriptor_dynlink.h
    aca_sgm2/common/inc/dynlink/common_functions_dynlink.h
    aca_sgm2/common/inc/dynlink/cuda_drvapi_dynlink.h
    aca_sgm2/common/inc/dynlink/cuda_drvapi_dynlink_cuda.h
    aca_sgm2/common/inc/dynlink/cuda_drvapi_dynlink_d3d.h
    aca_sgm2/common/inc/dynlink/cuda_drvapi_dynlink_gl.h
    aca_sgm2/common/inc/dynlink/cuda_runtime_api_dynlink.h
    aca_sgm2/common/inc/dynlink/cuda_runtime_dynlink.h
    aca_sgm2/common/inc/dynlink/cuda_texture_types_dynlink.h
    aca_sgm2/common/inc/dynlink/device_functions_dynlink.h
    aca_sgm2/common/inc/dynlink/math_functions_dbl_ptx3_dynlink.h
    aca_sgm2/common/inc/dynlink/math_functions_dynlink.h
    aca_sgm2/common/inc/dynlink/texture_fetch_functions_dynlink.h
    aca_sgm2/common/inc/GL/freeglut.h
    aca_sgm2/common/inc/GL/freeglut_ext.h
    aca_sgm2/common/inc/GL/freeglut_std.h
    aca_sgm2/common/inc/GL/glew.h
    aca_sgm2/common/inc/GL/glext.h
    aca_sgm2/common/inc/GL/glut.h
    aca_sgm2/common/inc/GL/glxew.h
    aca_sgm2/common/inc/GL/glxext.h
    aca_sgm2/common/inc/GL/wglew.h
    aca_sgm2/common/inc/html/search/all_63.html
    aca_sgm2/common/inc/html/search/all_64.html
    aca_sgm2/common/inc/html/search/close.png
    aca_sgm2/common/inc/html/search/defines_63.html
    aca_sgm2/common/inc/html/search/defines_64.html
    aca_sgm2/common/inc/html/search/enums_63.html
    aca_sgm2/common/inc/html/search/enumvalues_63.html
    aca_sgm2/common/inc/html/search/files_63.html
    aca_sgm2/common/inc/html/search/functions_63.html
    aca_sgm2/common/inc/html/search/nomatches.html
    aca_sgm2/common/inc/html/search/search.css
    aca_sgm2/common/inc/html/search/search.js
    aca_sgm2/common/inc/html/search/search.png
    aca_sgm2/common/inc/html/cutil_8h.html
    aca_sgm2/common/inc/html/cutil_8h_source.html
    aca_sgm2/common/inc/html/doxygen.css
    aca_sgm2/common/inc/html/doxygen.png
    aca_sgm2/common/inc/html/files.html
    aca_sgm2/common/inc/html/globals.html
    aca_sgm2/common/inc/html/globals_defs.html
    aca_sgm2/common/inc/html/globals_enum.html
    aca_sgm2/common/inc/html/globals_eval.html
    aca_sgm2/common/inc/html/globals_func.html
    aca_sgm2/common/inc/html/index.html
    aca_sgm2/common/inc/html/installdox
    aca_sgm2/common/inc/html/tab_b.gif
    aca_sgm2/common/inc/html/tab_l.gif
    aca_sgm2/common/inc/html/tab_r.gif
    aca_sgm2/common/inc/html/tabs.css
    aca_sgm2/common/inc/latex/cutil_8h.tex
    aca_sgm2/common/inc/latex/doxygen.sty
    aca_sgm2/common/inc/latex/files.tex
    aca_sgm2/common/inc/latex/Makefile
    aca_sgm2/common/inc/latex/refman.tex
    aca_sgm2/common/inc/bank_checker.h
    aca_sgm2/common/inc/cmd_arg_reader.h
    aca_sgm2/common/inc/cuda_drvapi_dynlink.c
    aca_sgm2/common/inc/cutil.h
    aca_sgm2/common/inc/cutil_gl_error.h
    aca_sgm2/common/inc/cutil_gl_inline.h
    aca_sgm2/common/inc/cutil_inline.h
    aca_sgm2/common/inc/cutil_inline_bankchecker.h
    aca_sgm2/common/inc/cutil_inline_drvapi.h
    aca_sgm2/common/inc/cutil_inline_runtime.h
    aca_sgm2/common/inc/cutil_math.h
    aca_sgm2/common/inc/Doxyfile
    aca_sgm2/common/inc/dynlink_d3d10.h
    aca_sgm2/common/inc/dynlink_d3d11.h
    aca_sgm2/common/inc/error_checker.h
    aca_sgm2/common/inc/exception.h
    aca_sgm2/common/inc/multithreading.h
    aca_sgm2/common/inc/nvGlutWidgets.h
    aca_sgm2/common/inc/nvGLWidgets.h
    aca_sgm2/common/inc/nvMath.h
    aca_sgm2/common/inc/nvMatrix.h
    aca_sgm2/common/inc/nvQuaternion.h
    aca_sgm2/common/inc/nvShaderUtils.h
    aca_sgm2/common/inc/nvVector.h
    aca_sgm2/common/inc/nvWidgets.h
    aca_sgm2/common/inc/param.h
    aca_sgm2/common/inc/paramgl.h
    aca_sgm2/common/inc/rendercheck_d3d10.h
    aca_sgm2/common/inc/rendercheck_d3d11.h
    aca_sgm2/common/inc/rendercheck_d3d9.h
    aca_sgm2/common/inc/rendercheck_gl.h
    aca_sgm2/common/inc/stopwatch.h
    aca_sgm2/common/inc/stopwatch_base.h
    aca_sgm2/common/inc/stopwatch_base.inl
    aca_sgm2/common/inc/stopwatch_linux.h
    aca_sgm2/common/lib/linux/libGLEW.a
    aca_sgm2/common/lib/linux/libGLEW_x86_64.a
    aca_sgm2/common/obj/i386/release/bank_checker.cpp.o
    aca_sgm2/common/obj/i386/release/cmd_arg_reader.cpp.o
    aca_sgm2/common/obj/i386/release/cutil.cpp.o
    aca_sgm2/common/obj/i386/release/multithreading.cpp.o
    aca_sgm2/common/obj/i386/release/param.cpp.o
    aca_sgm2/common/obj/i386/release/paramgl.cpp.o
    aca_sgm2/common/obj/i386/release/rendercheck_gl.cpp.o
    aca_sgm2/common/obj/i386/release/stopwatch.cpp.o
    aca_sgm2/common/obj/i386/release/stopwatch_linux.cpp.o
    aca_sgm2/common/obj/x86_64/release/bank_checker.cpp.o
    aca_sgm2/common/obj/x86_64/release/cmd_arg_reader.cpp.o
    aca_sgm2/common/src/bank_checker.cpp
    aca_sgm2/common/src/cmd_arg_reader.cpp
    aca_sgm2/common/src/cuda_runtime_dynlink.cpp
    aca_sgm2/common/src/cutil.cpp
    aca_sgm2/common/src/multithreading.cpp
    aca_sgm2/common/src/param.cpp
    aca_sgm2/common/src/paramgl.cpp
    aca_sgm2/common/src/rendercheck_d3d10.cpp
    aca_sgm2/common/src/rendercheck_d3d11.cpp
    aca_sgm2/common/src/rendercheck_d3d9.cpp
    aca_sgm2/common/src/rendercheck_gl.cpp
    aca_sgm2/common/src/stopwatch.cpp
    aca_sgm2/common/src/stopwatch_linux.cpp
    aca_sgm2/common/common.mk
    aca_sgm2/common/cutil_Readme.txt
    aca_sgm2/common/Makefile
    aca_sgm2/common/Makefile_paramgl
    aca_sgm2/common/Makefile_rendercheckgl
    aca_sgm2/lbull.pgm
    aca_sgm2/lcones.pgm
    aca_sgm2/lteddy.pgm
    aca_sgm2/lvenus.pgm
    aca_sgm2/Makefile
    aca_sgm2/rbull.pgm
    aca_sgm2/rcones.pgm
    aca_sgm2/reference.pgm
    aca_sgm2/rteddy.pgm
    aca_sgm2/rvenus.pgm
    aca_sgm2/sgm.cu
    aca_sgm2/testDiffs.cu
    aca_sgm3/common/inc/dynlink/channel_descriptor_dynlink.h
    aca_sgm3/common/inc/dynlink/common_functions_dynlink.h
    aca_sgm3/common/inc/dynlink/cuda_drvapi_dynlink.h
    aca_sgm3/common/inc/dynlink/cuda_drvapi_dynlink_cuda.h
    aca_sgm3/common/inc/dynlink/cuda_drvapi_dynlink_d3d.h
    aca_sgm3/common/inc/dynlink/cuda_drvapi_dynlink_gl.h
    aca_sgm3/common/inc/dynlink/cuda_runtime_api_dynlink.h
    aca_sgm3/common/inc/dynlink/cuda_runtime_dynlink.h
    aca_sgm3/common/inc/dynlink/cuda_texture_types_dynlink.h
    aca_sgm3/common/inc/dynlink/device_functions_dynlink.h
    aca_sgm3/common/inc/dynlink/math_functions_dbl_ptx3_dynlink.h
    aca_sgm3/common/inc/dynlink/math_functions_dynlink.h
    aca_sgm3/common/inc/dynlink/texture_fetch_functions_dynlink.h
    aca_sgm3/common/inc/GL/freeglut.h
    aca_sgm3/common/inc/GL/freeglut_ext.h
    aca_sgm3/common/inc/GL/freeglut_std.h
    aca_sgm3/common/inc/GL/glew.h
    aca_sgm3/common/inc/GL/glext.h
    aca_sgm3/common/inc/GL/glut.h
    aca_sgm3/common/inc/GL/glxew.h
    aca_sgm3/common/inc/GL/glxext.h
    aca_sgm3/common/inc/GL/wglew.h
    aca_sgm3/common/inc/html/search/all_63.html
    aca_sgm3/common/inc/html/search/all_64.html
    aca_sgm3/common/inc/html/search/close.png
    aca_sgm3/common/inc/html/search/defines_63.html
    aca_sgm3/common/inc/html/search/defines_64.html
    aca_sgm3/common/inc/html/search/enums_63.html
    aca_sgm3/common/inc/html/search/enumvalues_63.html
    aca_sgm3/common/inc/html/search/files_63.html
    aca_sgm3/common/inc/html/search/functions_63.html
    aca_sgm3/common/inc/html/search/nomatches.html
    aca_sgm3/common/inc/html/search/search.css
    aca_sgm3/common/inc/html/search/search.js
    aca_sgm3/common/inc/html/search/search.png
    aca_sgm3/common/inc/html/cutil_8h.html
    aca_sgm3/common/inc/html/cutil_8h_source.html
    aca_sgm3/common/inc/html/doxygen.css
    aca_sgm3/common/inc/html/doxygen.png
    aca_sgm3/common/inc/html/files.html
    aca_sgm3/common/inc/html/globals.html
    aca_sgm3/common/inc/html/globals_defs.html
    aca_sgm3/common/inc/html/globals_enum.html
    aca_sgm3/common/inc/html/globals_eval.html
    aca_sgm3/common/inc/html/globals_func.html
    aca_sgm3/common/inc/html/index.html
    aca_sgm3/common/inc/html/installdox
    aca_sgm3/common/inc/html/tab_b.gif
    aca_sgm3/common/inc/html/tab_l.gif
    aca_sgm3/common/inc/html/tab_r.gif
    aca_sgm3/common/inc/html/tabs.css
    aca_sgm3/common/inc/latex/cutil_8h.tex
    aca_sgm3/common/inc/latex/doxygen.sty
    aca_sgm3/common/inc/latex/files.tex
    aca_sgm3/common/inc/latex/Makefile
    aca_sgm3/common/inc/latex/refman.tex
    aca_sgm3/common/inc/bank_checker.h
    aca_sgm3/common/inc/cmd_arg_reader.h
    aca_sgm3/common/inc/cuda_drvapi_dynlink.c
    aca_sgm3/common/inc/cutil.h
    aca_sgm3/common/inc/cutil_gl_error.h
    aca_sgm3/common/inc/cutil_gl_inline.h
    aca_sgm3/common/inc/cutil_inline.h
    aca_sgm3/common/inc/cutil_inline_bankchecker.h
    aca_sgm3/common/inc/cutil_inline_drvapi.h
    aca_sgm3/common/inc/cutil_inline_runtime.h
    aca_sgm3/common/inc/cutil_math.h
    aca_sgm3/common/inc/Doxyfile
    aca_sgm3/common/inc/dynlink_d3d10.h
    aca_sgm3/common/inc/dynlink_d3d11.h
    aca_sgm3/common/inc/error_checker.h
    aca_sgm3/common/inc/exception.h
    aca_sgm3/common/inc/multithreading.h
    aca_sgm3/common/inc/nvGlutWidgets.h
    aca_sgm3/common/inc/nvGLWidgets.h
    aca_sgm3/common/inc/nvMath.h
    aca_sgm3/common/inc/nvMatrix.h
    aca_sgm3/common/inc/nvQuaternion.h
    aca_sgm3/common/inc/nvShaderUtils.h
    aca_sgm3/common/inc/nvVector.h
    aca_sgm3/common/inc/nvWidgets.h
    aca_sgm3/common/inc/param.h
    aca_sgm3/common/inc/paramgl.h
    aca_sgm3/common/inc/rendercheck_d3d10.h
    aca_sgm3/common/inc/rendercheck_d3d11.h
    aca_sgm3/common/inc/rendercheck_d3d9.h
    aca_sgm3/common/inc/rendercheck_gl.h
    aca_sgm3/common/inc/stopwatch.h
    aca_sgm3/common/inc/stopwatch_base.h
    aca_sgm3/common/inc/stopwatch_base.inl
    aca_sgm3/common/inc/stopwatch_linux.h
    aca_sgm3/common/lib/linux/libGLEW.a
    aca_sgm3/common/lib/linux/libGLEW_x86_64.a
    aca_sgm3/common/obj/i386/release/bank_checker.cpp.o
    aca_sgm3/common/obj/i386/release/cmd_arg_reader.cpp.o
    aca_sgm3/common/obj/i386/release/cutil.cpp.o
    aca_sgm3/common/obj/i386/release/multithreading.cpp.o
    aca_sgm3/common/obj/i386/release/param.cpp.o
    aca_sgm3/common/obj/i386/release/paramgl.cpp.o
    aca_sgm3/common/obj/i386/release/rendercheck_gl.cpp.o
    aca_sgm3/common/obj/i386/release/stopwatch.cpp.o
    aca_sgm3/common/obj/i386/release/stopwatch_linux.cpp.o
    aca_sgm3/common/obj/x86_64/release/bank_checker.cpp.o
    aca_sgm3/common/obj/x86_64/release/cmd_arg_reader.cpp.o
    aca_sgm3/common/src/bank_checker.cpp
    aca_sgm3/common/src/cmd_arg_reader.cpp
    aca_sgm3/common/src/cuda_runtime_dynlink.cpp
    aca_sgm3/common/src/cutil.cpp
    aca_sgm3/common/src/multithreading.cpp
    aca_sgm3/common/src/param.cpp
    aca_sgm3/common/src/paramgl.cpp
    aca_sgm3/common/src/rendercheck_d3d10.cpp
    aca_sgm3/common/src/rendercheck_d3d11.cpp
    aca_sgm3/common/src/rendercheck_d3d9.cpp
    aca_sgm3/common/src/rendercheck_gl.cpp
    aca_sgm3/common/src/stopwatch.cpp
    aca_sgm3/common/src/stopwatch_linux.cpp
    aca_sgm3/common/common.mk
    aca_sgm3/common/cutil_Readme.txt
    aca_sgm3/common/Makefile
    aca_sgm3/common/Makefile_paramgl
    aca_sgm3/common/Makefile_rendercheckgl
    aca_sgm3/lbull.pgm
    aca_sgm3/lcones.pgm
    aca_sgm3/lteddy.pgm
    aca_sgm3/lvenus.pgm
    aca_sgm3/Makefile
    aca_sgm3/rbull.pgm
    aca_sgm3/rcones.pgm
    aca_sgm3/reference.pgm
    aca_sgm3/rteddy.pgm
    aca_sgm3/rvenus.pgm
    aca_sgm3/sgm.cu
    aca_sgm3/testDiffs.cu
    aca_sgm4/common/inc/dynlink/channel_descriptor_dynlink.h
    aca_sgm4/common/inc/dynlink/common_functions_dynlink.h
    aca_sgm4/common/inc/dynlink/cuda_drvapi_dynlink.h
    aca_sgm4/common/inc/dynlink/cuda_drvapi_dynlink_cuda.h
    aca_sgm4/common/inc/dynlink/cuda_drvapi_dynlink_d3d.h
    aca_sgm4/common/inc/dynlink/cuda_drvapi_dynlink_gl.h
    aca_sgm4/common/inc/dynlink/cuda_runtime_api_dynlink.h
    aca_sgm4/common/inc/dynlink/cuda_runtime_dynlink.h
    aca_sgm4/common/inc/dynlink/cuda_texture_types_dynlink.h
    aca_sgm4/common/inc/dynlink/device_functions_dynlink.h
    aca_sgm4/common/inc/dynlink/math_functions_dbl_ptx3_dynlink.h
    aca_sgm4/common/inc/dynlink/math_functions_dynlink.h
    aca_sgm4/common/inc/dynlink/texture_fetch_functions_dynlink.h
    aca_sgm4/common/inc/GL/freeglut.h
    aca_sgm4/common/inc/GL/freeglut_ext.h
    aca_sgm4/common/inc/GL/freeglut_std.h
    aca_sgm4/common/inc/GL/glew.h
    aca_sgm4/common/inc/GL/glext.h
    aca_sgm4/common/inc/GL/glut.h
    aca_sgm4/common/inc/GL/glxew.h
    aca_sgm4/common/inc/GL/glxext.h
    aca_sgm4/common/inc/GL/wglew.h
    aca_sgm4/common/inc/html/search/all_63.html
    aca_sgm4/common/inc/html/search/all_64.html
    aca_sgm4/common/inc/html/search/close.png
    aca_sgm4/common/inc/html/search/defines_63.html
    aca_sgm4/common/inc/html/search/defines_64.html
    aca_sgm4/common/inc/html/search/enums_63.html
    aca_sgm4/common/inc/html/search/enumvalues_63.html
    aca_sgm4/common/inc/html/search/files_63.html
    aca_sgm4/common/inc/html/search/functions_63.html
    aca_sgm4/common/inc/html/search/nomatches.html
    aca_sgm4/common/inc/html/search/search.css
    aca_sgm4/common/inc/html/search/search.js
    aca_sgm4/common/inc/html/search/search.png
    aca_sgm4/common/inc/html/cutil_8h.html
    aca_sgm4/common/inc/html/cutil_8h_source.html
    aca_sgm4/common/inc/html/doxygen.css
    aca_sgm4/common/inc/html/doxygen.png
    aca_sgm4/common/inc/html/files.html
    aca_sgm4/common/inc/html/globals.html
    aca_sgm4/common/inc/html/globals_defs.html
    aca_sgm4/common/inc/html/globals_enum.html
    aca_sgm4/common/inc/html/globals_eval.html
    aca_sgm4/common/inc/html/globals_func.html
    aca_sgm4/common/inc/html/index.html
    aca_sgm4/common/inc/html/installdox
    aca_sgm4/common/inc/html/tab_b.gif
    aca_sgm4/common/inc/html/tab_l.gif
    aca_sgm4/common/inc/html/tab_r.gif
    aca_sgm4/common/inc/html/tabs.css
    aca_sgm4/common/inc/latex/cutil_8h.tex
    aca_sgm4/common/inc/latex/doxygen.sty
    aca_sgm4/common/inc/latex/files.tex
    aca_sgm4/common/inc/latex/Makefile
    aca_sgm4/common/inc/latex/refman.tex
    aca_sgm4/common/inc/bank_checker.h
    aca_sgm4/common/inc/cmd_arg_reader.h
    aca_sgm4/common/inc/cuda_drvapi_dynlink.c
    aca_sgm4/common/inc/cutil.h
    aca_sgm4/common/inc/cutil_gl_error.h
    aca_sgm4/common/inc/cutil_gl_inline.h
    aca_sgm4/common/inc/cutil_inline.h
    aca_sgm4/common/inc/cutil_inline_bankchecker.h
    aca_sgm4/common/inc/cutil_inline_drvapi.h
    aca_sgm4/common/inc/cutil_inline_runtime.h
    aca_sgm4/common/inc/cutil_math.h
    aca_sgm4/common/inc/Doxyfile
    aca_sgm4/common/inc/dynlink_d3d10.h
    aca_sgm4/common/inc/dynlink_d3d11.h
    aca_sgm4/common/inc/error_checker.h
    aca_sgm4/common/inc/exception.h
    aca_sgm4/common/inc/multithreading.h
    aca_sgm4/common/inc/nvGlutWidgets.h
    aca_sgm4/common/inc/nvGLWidgets.h
    aca_sgm4/common/inc/nvMath.h
    aca_sgm4/common/inc/nvMatrix.h
    aca_sgm4/common/inc/nvQuaternion.h
    aca_sgm4/common/inc/nvShaderUtils.h
    aca_sgm4/common/inc/nvVector.h
    aca_sgm4/common/inc/nvWidgets.h
    aca_sgm4/common/inc/param.h
    aca_sgm4/common/inc/paramgl.h
    aca_sgm4/common/inc/rendercheck_d3d10.h
    aca_sgm4/common/inc/rendercheck_d3d11.h
    aca_sgm4/common/inc/rendercheck_d3d9.h
    aca_sgm4/common/inc/rendercheck_gl.h
    aca_sgm4/common/inc/stopwatch.h
    aca_sgm4/common/inc/stopwatch_base.h
    aca_sgm4/common/inc/stopwatch_base.inl
    aca_sgm4/common/inc/stopwatch_linux.h
    aca_sgm4/common/lib/linux/libGLEW.a
    aca_sgm4/common/lib/linux/libGLEW_x86_64.a
    aca_sgm4/common/obj/i386/release/bank_checker.cpp.o
    aca_sgm4/common/obj/i386/release/cmd_arg_reader.cpp.o
    aca_sgm4/common/obj/i386/release/cutil.cpp.o
    aca_sgm4/common/obj/i386/release/multithreading.cpp.o
    aca_sgm4/common/obj/i386/release/param.cpp.o
    aca_sgm4/common/obj/i386/release/paramgl.cpp.o
    aca_sgm4/common/obj/i386/release/rendercheck_gl.cpp.o
    aca_sgm4/common/obj/i386/release/stopwatch.cpp.o
    aca_sgm4/common/obj/i386/release/stopwatch_linux.cpp.o
    aca_sgm4/common/obj/x86_64/release/bank_checker.cpp.o
    aca_sgm4/common/obj/x86_64/release/cmd_arg_reader.cpp.o
    aca_sgm4/common/obj/x86_64/release/cutil.cpp.o
    aca_sgm4/common/obj/x86_64/release/multithreading.cpp.o
    aca_sgm4/common/obj/x86_64/release/stopwatch.cpp.o
    aca_sgm4/common/obj/x86_64/release/stopwatch_linux.cpp.o
    aca_sgm4/common/src/bank_checker.cpp
    aca_sgm4/common/src/cmd_arg_reader.cpp
    aca_sgm4/common/src/cuda_runtime_dynlink.cpp
    aca_sgm4/common/src/cutil.cpp
    aca_sgm4/common/src/multithreading.cpp
    aca_sgm4/common/src/param.cpp
    aca_sgm4/common/src/paramgl.cpp
    aca_sgm4/common/src/rendercheck_d3d10.cpp
    aca_sgm4/common/src/rendercheck_d3d11.cpp
    aca_sgm4/common/src/rendercheck_d3d9.cpp
    aca_sgm4/common/src/rendercheck_gl.cpp
    aca_sgm4/common/src/stopwatch.cpp
    aca_sgm4/common/src/stopwatch_linux.cpp
    aca_sgm4/common/common.mk
    aca_sgm4/common/cutil_Readme.txt
    aca_sgm4/common/Makefile
    aca_sgm4/common/Makefile_paramgl
    aca_sgm4/common/Makefile_rendercheckgl
    aca_sgm4/lib/libcutil_x86_64.a
    aca_sgm4/d_dbull.pgm
    aca_sgm4/h_dbull.pgm
    aca_sgm4/lbull.pgm
    aca_sgm4/lcones.pgm
    aca_sgm4/lteddy.pgm
    aca_sgm4/lvenus.pgm
    aca_sgm4/Makefile
    aca_sgm4/rbull.pgm
    aca_sgm4/rcones.pgm
    aca_sgm4/reference.pgm
    aca_sgm4/rteddy.pgm
    aca_sgm4/rvenus.pgm
    aca_sgm4/sgm
    aca_sgm4/sgm.cu
    aca_sgm4/testDiffs
    aca_sgm4/testDiffs.cu)

add_executable(aca_sgm ${SOURCE_FILES})